fixed pre wrapping (bug introduced in 5a94948e)

--- a/css/basic.css
+++ b/css/basic.css
@@ -218,6 +218,7 @@ pre, code, samp, kbd {
 }
 pre {
     overflow: auto;
+    word-wrap: normal;
 }
 
 blockquote {
